# webpritok

./: README.md  stack.yaml  webpritok.cabal
app/: Main.hs  Production.hs
src/: FirebirdDB.hs  Interface.hs  Netstat.hs  Service.hs  ServiceIO.hs  Types.hs
