name:                webpritok
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/webpritok#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Service
                     , FirebirdDB
                     , Netstat
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , inline-c
                     , text
                     , aeson
                     , conduit
                     , either
  default-language:    Haskell2010
  default-extensions:  Strict
  c-sources:           src/Service.c
  ghc-options:         -fno-full-laziness

executable webpritok-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-c -with-rtsopts=-T -fno-full-laziness
  default-extensions:  Strict
  build-depends:       base
                     , webpritok
                     , scotty
                     , http-types
                     , aeson
                     , wai
                     , bytestring
                     , conduit
                     , conduit-extra
                     , resourcet
                     , warp
                     , wai-conduit
                     , either
                     , transformers
                     , binary
  default-language:    Haskell2010

test-suite webpritok-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , webpritok
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dambaev/webpritok
